--- a/index.html
+++ b/index.html
@@ -5,44 +5,46 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Hyther</h1>
+    <div class="hyther">
+        <img src="hyther.gif">
+    </div>
     <div class="centered-block">
         <div class="profile-picture">
             <img src="https://contents.potofu.me/images/BQvOBsj4ZIz2.jpg">
         </div>
-        <span class="description">read visual novels</span><br>
-        <div class="link-block" onclick="window.location.href='https://twitter.com/Hyther_'">
+        <span class="description">read visual novels<br>我喜歡夏和小</span><br>
+        <a class="link-block" href="https://twitter.com/Hyther_">
             <img class="link-image" src="twitter.png">
             <span class="link-name">Twitter</span>
-        </div>
-        <div class="link-block" onclick="window.location.href='https://www.youtube.com/@HugoYip'">
+        </a>
+        <a class="link-block" href="https://www.youtube.com/@HugoYip">
             <img class="link-image" src="youtube.png">
             <span class="link-name">YouTube</span>
-        </div>
-        <div class="link-block" onclick="window.location.href='https://www.facebook.com/hugo.yip.5249'">
+        </a>
+        <a class="link-block" href="https://www.facebook.com/hugo.yip.5249">
             <img class="link-image" src="facebook.png">
             <span class="link-name">Facebook</span>
-        </div>
-        <div class="link-block" onclick="window.location.href='https://www.instagram.com/_hugoyip/'">
+        </a>
+        <a class="link-block" href="https://www.instagram.com/_hugoyip/">
             <img class="link-image" src="instagram.png">
             <span class="link-name">Instagram</span>
-        </div>
-        <div class="link-block" onclick="window.location.href='https://osu.ppy.sh/users/16069829'">
+        </a>
+        <a class="link-block" href="https://osu.ppy.sh/users/16069829">
             <img class="link-image" src="osu.jpg">
             <span class="link-name">osu!</span>
-        </div>
-        <div class="link-block" onclick="window.location.href='https://steamcommunity.com/id/Hyther'">
+        </a>
+        <a class="link-block" href="https://steamcommunity.com/id/Hyther">
             <img class="link-image" src="steam.jpg">
             <span class="link-name">Steam</span>
-        </div>
-        <div class="link-block" onclick="window.location.href='https://anilist.co/user/Hyther/'">
+        </a>
+        <a class="link-block" href="https://anilist.co/user/Hyther/">
             <img class="link-image" src="anilist.jpg">
             <span class="link-name">AniList</span>
-        </div>
-        <div class="link-block" onclick="window.location.href='https://vndb.org/u218489/ulist?f=&l=0&l=1&l=2&l=3&l=4&l=7&mul=0&p=1&s=3q02'">
+        </a>
+        <a class="link-block" href="https://vndb.org/u218489/ulist?f=&l=0&l=1&l=2&l=3&l=4&l=7&mul=0&p=1&s=3q02">
             <img class="link-image" src="vndb.jpg">
             <span class="link-name">VNDB</span>
-        </div>
+        </a>
     </div>
 </body>
 </html>
