--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Hyther</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="javascript.js"></script>
 </head>
 <body>
     <div class="hyther">
@@ -10,12 +11,21 @@
     </div>
     <div class="centered-block">
         <div class="profile-picture">
-            <img src="https://contents.potofu.me/images/BQvOBsj4ZIz2.jpg">
+            <img src="icon.png">
         </div>
         <span class="description">read visual novels<br>我喜歡夏和小</span><br>
+        <span class="others">Discord: <span class="copytext">undomyname</span><br>Email: <span class="copytext">hugoyip2005@gmail.com</span></span>
         <a class="link-block" href="https://twitter.com/Hyther_">
             <img class="link-image" src="twitter.png">
             <span class="link-name">Twitter</span>
+        </a>
+        <a class="link-block" href="https://www.twitch.tv/hyther_">
+            <img class="link-image" src="twitch.png">
+            <span class="link-name">Twitch</span>
+        </a>
+        <a class="link-block" href="https://github.com/hyther1111">
+            <img class="link-image" src="github.png">
+            <span class="link-name">Github</span>
         </a>
         <a class="link-block" href="https://www.youtube.com/@HugoYip">
             <img class="link-image" src="youtube.png">
