--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="profile-picture">
             <img src="icon.png">
         </div>
-        <span class="description">read visual novels<br>我喜歡夏和小</span><br>
-        <span class="others">Discord: <span class="copytext">undomyname</span><br>Email: <span class="copytext">hugoyip2005@gmail.com</span></span>
+        <span class="description">read visual novels</span>
+        <span class="others">Discord: <span class="copytext">_hyther</span><br>Email: <span class="copytext">hugoyip2005@gmail.com</span></span>
         <a class="link-block" href="https://twitter.com/Hyther_">
             <img class="link-image" src="twitter.png">
             <span class="link-name">Twitter</span>
@@ -58,3 +58,4 @@
     </div>
 </body>
 </html>
+
