--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
             <img class="link-image" src="twitch.png">
             <span class="link-name">Twitch</span>
         </a>
-        <a class="link-block" href="https://github.com/hyther1111">
+        <!--<a class="link-block" href="https://github.com/hyther1111">
             <img class="link-image" src="github.png">
-            <span class="link-name">Github</span>
+            <span class="link-name">Github</span>-->
         </a>
-        <a class="link-block" href="https://www.youtube.com/@HugoYip">
+        <!--<a class="link-block" href="https://www.youtube.com/@HugoYip">
             <img class="link-image" src="youtube.png">
-            <span class="link-name">YouTube</span>
+            <span class="link-name">YouTube</span>-->
         </a>
-        <a class="link-block" href="https://www.facebook.com/hugo.yip.5249">
+        <!--<a class="link-block" href="https://www.facebook.com/hugo.yip.5249">
             <img class="link-image" src="facebook.png">
-            <span class="link-name">Facebook</span>
+            <span class="link-name">Facebook</span>-->
         </a>
-        <a class="link-block" href="https://www.instagram.com/_hugoyip/">
+        <!--<a class="link-block" href="https://www.instagram.com/_hugoyip/">
             <img class="link-image" src="instagram.png">
-            <span class="link-name">Instagram</span>
+            <span class="link-name">Instagram</span>-->
         </a>
-        <a class="link-block" href="https://osu.ppy.sh/users/16069829">
+        <!--<a class="link-block" href="https://osu.ppy.sh/users/16069829">
             <img class="link-image" src="osu.jpg">
-            <span class="link-name">osu!</span>
+            <span class="link-name">osu!</span>-->
         </a>
         <a class="link-block" href="https://steamcommunity.com/id/Hyther">
             <img class="link-image" src="steam.jpg">
             <span class="link-name">Steam</span>
         </a>
-        <a class="link-block" href="https://anilist.co/user/Hyther/">
+        <!--<a class="link-block" href="https://anilist.co/user/Hyther/">
             <img class="link-image" src="anilist.jpg">
             <span class="link-name">AniList</span>
-        </a>
+        </a>-->
         <a class="link-block" href="https://vndb.org/u218489/ulist?f=&l=0&l=1&l=2&l=3&l=4&l=7&mul=0&p=1&s=3q02">
             <img class="link-image" src="vndb.jpg">
             <span class="link-name">VNDB</span>
@@ -58,4 +58,5 @@
     </div>
 </body>
 </html>
+
 
