--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="icon.png">
         </div>
         <span class="description">read visual novels</span>
-        <span class="others">Discord: <span class="copytext">_hyther</span><br>Email: <span class="copytext">hugoyip2005@gmail.com</span></span>
+        <span class="others">Discord: <span class="copytext">_hyther</span><!--<br>Email: <span class="copytext">hugoyip2005@gmail.com</span>--></span>
         <a class="link-block" href="https://twitter.com/Hyther_">
             <img class="link-image" src="twitter.png">
             <span class="link-name">Twitter</span>
@@ -58,5 +58,6 @@
     </div>
 </body>
 </html>
+
 
 
